Add: Test hero component y service Fix: mejorar logica de tabla y paginacion

--- a/angular/src/app/modules/admin/components/hero/hero.component.html
+++ b/angular/src/app/modules/admin/components/hero/hero.component.html
@@ -1,14 +1,14 @@
 <h2 *ngIf="hero.id else isNotNew">Modify Hero</h2>
 <ng-template #isNotNew><h2>Create Hero</h2></ng-template>
 <mat-divider></mat-divider>
+<div *ngIf="state.error" class="alert alert-danger" role="alert">
+  {{ state.error }}
+</div>
 <form [formGroup]="heroForm" (ngSubmit)="onSubmit()">
   <div class="contenedor">
     <mat-form-field>
-      <input matInput type="text" placeholder="Name" formControlName="name"
+      <input id="name" matInput type="text" placeholder="Name" formControlName="name"
       autocomplete="Off" uppercase>
-      <!--<mat-error *ngIf="!heroForm?.get('name')?.valid">gfg
-        {{ getErrorMessage('name') }}
-      </mat-error>--> 
       <mat-error *ngIf="!name?.valid && name!.errors?.['required']">
         Name is required.
       </mat-error>
@@ -21,7 +21,7 @@
     </mat-form-field>
 
     <mat-form-field>
-      <input matInput type="text" placeholder="Alias" formControlName="alias"
+      <input id="alias" matInput type="text" placeholder="Alias" formControlName="alias"
       autocomplete="Off">
       <mat-error *ngIf="!alias?.valid && alias!.errors?.['required']">
         Alias is required.
@@ -35,7 +35,8 @@
     </mat-form-field>
     
     <mat-form-field>
-      <input matInput type="text" placeholder="Short Bio" formControlName="shortBio"
+      <input id="shortBio" matInput type="text" placeholder="Short Bio" 
+      formControlName="shortBio"
       autocomplete="Off">
       <mat-error *ngIf="!shortBio?.valid && shortBio!.errors?.['required']">
         Short bio is required.
@@ -49,7 +50,8 @@
     </mat-form-field>
 
     <mat-form-field>
-      <textarea matInput type="text" placeholder="Bio" formControlName="bio"
+      <textarea id="bio" matInput type="text" placeholder="Bio" 
+      formControlName="bio"
       autocomplete="Off"></textarea>
       <mat-error *ngIf="!bio?.valid && bio!.errors?.['required']">
         Bio is required.
@@ -64,10 +66,8 @@
 
     <mat-dialog-actions>
       <button type="button" mat-raised-button (click)="close()">Close</button>
-      <button mat-raised-button color="primary">Save</button>
+      <button type="submit" id="saveBtn" mat-raised-button color="primary">Save</button>
     </mat-dialog-actions>
-
-    <!--<button mat-raised-button color="primary">Save</button>-->
 
   </div>
 </form>
