- Add: test confirmacion-delete component - Fix: Mejoras en logica de paginacion

--- a/angular/src/app/modules/admin/components/confirm-delete/confirm-delete.component.html
+++ b/angular/src/app/modules/admin/components/confirm-delete/confirm-delete.component.html
@@ -2,6 +2,8 @@
 <mat-divider></mat-divider>
 <p>Are you sure delete this item?</p>
 <mat-dialog-actions>
-  <button type="button" mat-raised-button (click)="cancel()">Close</button>
-  <button mat-raised-button color="primary" (click)="delete()">Delete</button>
+  <button id="saveBtn" type="button" mat-raised-button (click)="cancel()">
+    Close</button>
+  <button id="delBtn" mat-raised-button color="primary" (click)="delete()">
+    Delete</button>
 </mat-dialog-actions>
